--- a/client/manifest.json
+++ b/client/manifest.json
@@ -4,6 +4,5 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#071019",
-  "theme_color": "#0b78d1",
-  "icons": []
+  "theme_color": "#0b78d1"
 }
